--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -22,7 +22,7 @@ ruleset=🍃 BT直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=💯️ TMDB,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tmdb/Tmdb.list
 ruleset=💯️ TMDB,https://raw.githubusercontent.com/akaet/openclash-rules/main/ruleset/TMDB.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/MusicLifa/MyRule/refs/heads/main/Ruleset/MyProxy.list
+;ruleset=🚀 节点选择,https://raw.githubusercontent.com/MusicLifa/MyRule/refs/heads/main/Ruleset/MyProxy.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
