--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -81,7 +81,7 @@ custom_proxy_group=🕊️ Twitter`select`[]🇭🇰 香港节点`[]🇺🇸 美
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 坡县节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=💬 Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 坡县节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`.*
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 坡县节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`.*
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🎥 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🎥 DisneyPlus`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`.*
