--- a/Config/MyClashNOBTC.ini
+++ b/Config/MyClashNOBTC.ini
@@ -15,6 +15,7 @@
 ;修改顺序会影响分流效果
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Huawei/Huawei.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/refs/heads/main/Ruleset/Exchanges.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/refs/heads/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
