--- a/Config/EasyClash.ini
+++ b/Config/EasyClash.ini
@@ -24,7 +24,7 @@ ruleset=🚀 节点选择,[]FINAL
 
 
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=💯️ TMDB`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`.*
