--- a/Config/MyClash2.ini
+++ b/Config/MyClash2.ini
@@ -2,6 +2,7 @@
 ;解决DNS泄露，简易分流群组
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/refs/heads/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=💯️ TMDB,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tmdb/Tmdb.list
 ruleset=💯️ TMDB,https://raw.githubusercontent.com/akaet/openclash-rules/main/ruleset/TMDB.list
