--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -59,25 +59,25 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐠 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🚀 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=✈️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🍁 YouTube`select`[]⛱️ 节点选择`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`
-custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🍻 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🧸 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=☃️‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🚀 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=✈️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🍁 YouTube`select`[]⛱️ 节点选择`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`
+custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🍻 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=🧸 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
+custom_proxy_group=☃️‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=☘️ 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]REJECT
