--- a/Config/MyClashNOAD.ini
+++ b/Config/MyClashNOAD.ini
@@ -1,4 +1,4 @@
-[custom]
+﻿[custom]
 ;解决DNS泄露，分流群组
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
