--- a/Config/MyClashNOAD.ini
+++ b/Config/MyClashNOAD.ini
@@ -78,7 +78,7 @@ custom_proxy_group=👻 Discord`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国
 custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=🪇 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=🪙 货币交易`select`[]🇸🇬 坡县节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇹🇭 泰国节点`[]🇺🇸 美国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换`[]🎯 全球直连
-custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=💯️ 电影刮削`select`[]🇸🇬 坡县节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇺🇸 美国节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
 custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 倭国节点`[]🇰🇷 棒子节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
